MDEV-6946: Assertion `0' failed in mysql_execute_command on SET STATEMENT keycache1.key_buffer_size=.. FOR

Variable type should be taken by mask GET_TYPE_MASK.